Ajuste nas páginas de Cadastro de Produtos

--- a/cadastrodeprodutodoacao.html
+++ b/cadastrodeprodutodoacao.html
@@ -49,7 +49,6 @@
             padding: 20px;
             color: var(--roxo);
         }
-
         form label {
             font-size: 20px;
             color: var(--roxo);
@@ -82,6 +81,7 @@
             flex-direction: column;
             /* Coloquei em coluna e assim quebra linha*/
             padding: 10px;
+            width: 230px;
         }
 
         .campo {
