--- a/cadastrodeprodutovenda.html
+++ b/cadastrodeprodutovenda.html
@@ -82,6 +82,7 @@
             flex-direction: column;
             /* Coloquei em coluna e assim quebra linha*/
             padding: 10px;
+            width: 230px;
         }
 
         .campo {
