Adicionada página Quem Somos

--- a/cadastroelogin.html
+++ b/cadastroelogin.html
@@ -99,7 +99,6 @@
             align-items: center;
             justify-content: center;
         }
-
         /*Conteúdo*/
         main {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -160,11 +159,12 @@
         h3,
         label,
         input {
-            color: #707070;
+        color: var(--roxo);
         }
 
         h3 {
             text-align: center;
+            padding-top: 20px;
             padding-bottom: 15px;
         }
 
