--- a/cadastrodevendedor.html
+++ b/cadastrodevendedor.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Cadastro e Login</title>
-    <!-- <link rel="stylesheet" href="CSS/estilos.css"> -->
+    <title>Cadastro de Vendedor</title>
+    <link rel="stylesheet" href="CSS/estilos.css">
     <style>
         :root {
             --roxo: #A200CB;
@@ -100,16 +100,25 @@
             justify-content: center;
         }
 
-        /*Conteúdo*/
+        /*Conteudo*/
         main {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background-image: url(img/bannerpho.png);
-            background-repeat: no-repeat;
-            background-size: cover;
-            background-position: center;
         }
 
-        .cards {
+        h3 {
+            padding-top: 20px;
+            color: var(--roxo);
+            text-transform: uppercase;
+            padding-bottom: 5px;
+            text-align: center;
+        }
+
+        label,
+        input {
+            color: #707070;
+        }
+
+        .cardscadastrovendedor {
             width: 550px;
             margin: auto;
             display: flex;
@@ -118,72 +127,40 @@
             margin-bottom: 50px;
         }
 
-        .card_1 {
+        .informacao {
             display: flex;
             flex-direction: column;
             border: solid 1px #707070;
             border-radius: 8px;
             padding: 0px 30px;
-            height: 250px;
-            justify-content: center;
-            widows: 200px;
+            height: 200px;
+            justify-content: flex-start;
+            width: 190px;
             background-color: white;
         }
 
-        .card_2 {
+        .cadvend {
             display: flex;
             flex-direction: column;
-            width: 200px;
+            width: 190px;
             border: solid 1px #707070;
             border-radius: 8px;
             padding: 0px 30px;
             padding-bottom: 50px;
             justify-content: center;
             background-color: white;
+            align-items: center;
         }
 
-        .login {
+        .cadastro2 {
             display: flex;
             flex-direction: column;
-        }
-
-        .cadastro {
-            display: flex;
-            flex-direction: column;
-            padding: 5px 0px;
-        }
-
-        .card_2 form input {
-            width: 160px;
-        }
-
-        h3,
-        label,
-        input {
-            color: #707070;
-        }
-
-        h3 {
-            text-align: center;
-            padding-top: 20px;
-            padding-bottom: 15px;
-        }
-
-        .login,
-        .cadastro {
             padding: 9px;
         }
 
-        .login input,
-        .cadastro input {
+        .cadvend form input {
+            width: 160px;
             padding: 5px;
-        }
-
-        .btn {
-            display: flex;
-            justify-content: center;
-            margin: auto;
-            padding-bottom: 10px;
         }
 
         button {
@@ -193,9 +170,13 @@
             border: solid 1px var(--roxo);
             color: white;
         }
-    </style>
-    <style>
 
+        .btn {
+            display: flex;
+            justify-content: center;
+            margin: auto;
+            padding-bottom: 10px;
+        }
     </style>
 </head>
 
@@ -230,80 +211,69 @@
         </div>
     </header>
     <main>
-        <div class="cards">
-            <div class="card_1">
-                <h3>FAÇA LOGIN</h3>
-                <form method="POST">
-                    <div class="login">
-                        <label>Usuário</label>
-                        <input type="text" placeholder="Digite seu nome..." aria-label="Digite seu nome..."
-                            name="usuario" required>
-                    </div>
-                    <div class="login">
-                        <label>Senha</label>
-                        <input type="password" placeholder="Digite sua senha..." aria-label="Digite sua senha..."
-                            name="senha" required>
-                    </div>
-                    <div class="btn">
-                        <button type="submit"><b>ACESSAR</b></button>
-                    </div>
-                </form>
+        <div class="cardscadastrovendedor">
+            <div class="informacao">
+                <h3>Informação</h3>
+                <p>
+                    Neste campo você vendedor poderá realizar seu cadastro para poder vender seus produtos em nossa
+                    plataforma
+                </p>
             </div>
-            <div class="card_2">
-                <h3>CADASTRAR-SE</h3>
+            <div class="cadvend">
+                <h3>Cadastre um Vendedor</h3>
                 <form method="POST">
-                    <div class="cadastro">
-                        <label>Nome</label>
-                        <input type="text" placeholder="Digite o nome completo..."
-                            aria-label="Digite o nome completo..." name="nome" required>
+                    <div class="cadastro2">
+                        <label>Nome da empresa</label>
+                        <input type="text" placeholder="Digite o nome da empresa..."
+                            aria-label="Digite o nome da empresa..." name="nome" required>
                     </div>
-                    <div class="cadastro">
-                        <label>CPF</label>
-                        <input type="text" placeholder="Digite seu CPF..." aria-label="Digite seu CPF..." name="cpf"
+                    <div class="cadastro2">
+                        <label>CNPJ</label>
+                        <input type="text" placeholder="Digite o CNPJ..." aria-label="Digite o CNPJ..." name="cnpj"
                             required>
                     </div>
-                    <div class="cadastro">
-                        <label>Idade</label>
-                        <input type="text" placeholder="Digite sua idade" aria-label="Digite sua idade.." name="idade"
-                            required>
+                    <div class="cadastro2">
+                        <label>Razão Social</label>
+                        <input type="text" placeholder="Digite a razão social..." aria-label="Digite a razão social..."
+                            name="razsoc" required>
                     </div>
-                    <div class="cadastro">
+                    <div class="cadastro2">
                         <label>Telefone</label>
                         <input type="text" placeholder="Digite seu telefone..." aria-label="Digite seu telefone..."
                             name="tel" required>
                     </div>
-                    <div class="cadastro">
+                    <div class="cadastro2">
                         <label>CEP</label>
                         <input type="text" placeholder="Digite seu CEP..." aria-label="Digite seu CEP..." name="cep"
                             required>
                     </div>
-                    <div class="cadastro">
+                    <div class="cadastro2">
                         <label>Endereço</label>
                         <input type="text" placeholder="Digite seu endereço..." aria-label="Digite seu endereço..."
                             name="endereco" required>
                     </div>
-                    <div class="cadastro">
+                    <div class="cadastro2">
                         <label>Número</label>
                         <input type="text" placeholder="Digite o número da casa..."
                             aria-label="Digite o número da casa..." name="numero" required>
                     </div>
-                    <div class="cadastro">
+                    <div class="cadastro2">
                         <label>Bairro</label>
                         <input type="text" placeholder="Digite seu bairro..." aria-label="Digite seu bairro..."
                             name="bairro" required>
                     </div>
-                    <div class="cadastro">
+                    <div class="cadastro2">
                         <label>E-mail</label>
                         <input type="email" placeholder="Digite seu e-mail..." aria-label="Digite seu e-mail..."
                             name="email" required>
                     </div>
-                    <div class="cadastro">
+                    <div class="cadastro2">
                         <label>Senha</label>
                         <input type="password" placeholder="Digite sua senha..." aria-label="Digite sua senha..."
                             name="senha" required>
                     </div>
                     <div class="btn">
-                        <button type="submit"><b>CADASTRAR</b></button>
+                        <button type="submit"><b>CONTINUAR</b></button>
                     </div>
                 </form>
             </div>
