Adicionada pagina ONGS

--- a/paginaRankingAGORAVAIJESUS.html
+++ b/paginaRankingAGORAVAIJESUS.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="css/teste.css">
+    <link href="https://fonts.googleapis.com/css?family=Luckiest+Guy&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/ranking.css">
     <title>SMART SALE - RANKING</title>
 </head>
 
@@ -54,32 +55,32 @@
                     <tbody>
                         <tr>
                             <td>1</td>
-                            <td>Claudio</td>
+                            <td>Thiago Nascimento</td>
                             <td>100</td>
                         </tr>
                         <tr>
                             <td>2</td>
-                            <td>Renato</td>
+                            <td>Vitor Martins</td>
                             <td>100</td>
                         </tr>
                         <tr>
                             <td>3</td>
-                            <td>KK</td>
+                            <td>Larissa Azevedo</td>
                             <td>100</td>
                         </tr>
                         <tr>
                             <td>4</td>
-                            <td>Sei lá man joaquim</td>
+                            <td>Leonardo Araujo</td>
                             <td>100</td>
                         </tr>
                         <tr>
                             <td>5</td>
-                            <td>Burgue</td>
+                            <td>Marcela Alicia</td>
                             <td>100</td>
                         </tr>
                         <tr>
                             <td>6</td>
-                            <td>kbhfhkszfgsdlkç</td>
+                            <td>Carlos Morette</td>
                             <td>100</td>
                         </tr>
                         <tr>
