--- a/home.html
+++ b/home.html
@@ -51,11 +51,10 @@
         }
 
         .cardhome {
-
             display: flex;
             justify-content: space-around;
             flex-wrap: wrap;
-            padding: 0 0 10px;
+            padding: 0px 0px 10px;
         }
 
         .card {
@@ -202,6 +201,8 @@
         }
 
         .container h3 {
+            padding: 10px 0px 0px;
+            text-align: center;
             margin: 40px 0px -10px;
 
         }
@@ -211,7 +212,9 @@
             text-decoration: none;
             display: flex;
             justify-content: flex-end;
-            padding-bottom: 40px;
+            margin: 0px 0px 20px;
+            padding: 0px 0px 10px;
+            width: 1165px;
         }
 
         footer {
